# air_quality

./: .gitignore  .pre-commit-config.yaml  buffer.db  ingest.py  main.py  produce.py  pyproject.toml  sensor_data.db
air_quality_core/: py.typed  pyproject.toml
air_quality_core/src/air_quality_core/: __main__.py
air_quality_core/src/air_quality_core/application/: __init__.py  delete_data.py  ingest_reading.py  manage_mappings.py  query_readings.py  test_delete_data.py  test_manage_mappings.py  test_query_readings.py
air_quality_core/src/air_quality_core/config/: environments.py  settings.py
air_quality_core/src/air_quality_core/domain/: models.py  ports.py
air_quality_sensor/: .env.production  .env.testing  README.md  pyproject.toml
air_quality_sensor/src/air_quality_sensor/: __main__.py  buffered_publisher.py  delivery_loop.py  main.py  mqtt_publisher.py  poller.py  sensor.py  sensor_types.py  sqlite_buffer.py  test_buffered_publisher.py  test_delivery_loop.py  test_integration.py  test_mqtt_publisher.py  test_poller.py  test_sqlite_buffer.py  test_utils.py
air_quality_sensor/src/air_quality_sensor/sensing/: pms5003.py  test_pm_sensor.py
air_quality_sensor/src/air_quality_sensor/utils/: __init__.py  mocks.py
air_quality_server/: py.typed  pyproject.toml
air_quality_server/alembic/: env.py
air_quality_server/alembic/versions/: 0f90fc7cb614_create_readings_device_room_mappings.py  4fba5988d21e_create_readings_table.py  f72c5e62686d_initial.py
air_quality_server/src/air_quality_server/: __main__.py
air_quality_server/src/air_quality_server/adapters/api/: main.py  routes.py  schemas.py  test_routes.py
air_quality_server/src/air_quality_server/adapters/db/: repository.py  session.py  sqlalchemy_models.py  test_repository.py  uow.py
air_quality_server/src/air_quality_server/adapters/mqtt/: server.py
air_quality_server/src/air_quality_server/utils/: factories.py
air_quality_server/src/scripts/: danger_reset_alembic.py  danger_wipe_database.py  generate_fake_data.py  plot_readings.py  producer.py  run_api.py
frontend/: .env.local
frontend/air-dashboard/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/air-dashboard/src/: App.tsx  main.tsx
frontend/air-dashboard/src/api/: history.ts
frontend/air-dashboard/src/components/: CompositeChart.tsx  MetricChart.tsx  MetricToggle.tsx
frontend/air-dashboard/src/hooks/: useSize.ts
frontend/air-dashboard/src/store/: useFilters.ts
scripts/: danger_reset_alembic.py  danger_wipe_database.py  generate_fake_data.py  producer.py  run_api.py  run_e2e_test.py  run_sensor.py  run_server.py  setup_database.py
static/: index.html
stubs/plotext/: __init__.pyi
