[tool.poetry]
name        = "air_quality_core"
version     = "0.1.0"
description = "Domain + application layers"
authors     = ["Jacob <jacob.shotwell@gmail.com>"]

[tool.poetry.dependencies]
python            = ">=3.12,<3.13"
pydantic-settings = "^2.2"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
